# mqtt_under_attack

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: Features numéricas.md  data_description.md  getting-started.md  index.md
mqtt_under_attack/: __init__.py  config.py  dataset.py  features.py  plots.py
mqtt_under_attack/modeling/: predict.py  train.py
notebooks/: analise_exploratoria1.ipynb  analise_intrusion.ipynb
