[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mqtt_under_attack"
version = "0.0.1"
description = "An\u00e1lise explorat\u00f3ria utilizando o dataset"
authors = [
  { name = "William-SWS" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.13.9"


[tool.ruff]
line-length = 99
src = ["mqtt_under_attack"]
include = ["pyproject.toml", "mqtt_under_attack/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mqtt_under_attack"]
force-sort-within-sections = true

